--- a/style/style.css
+++ b/style/style.css
@@ -173,44 +173,43 @@ main{
     width:20px;
     height:20px;
     background:url('../asset/undobutton.svg');
-    background-size: contain;
+    /* background-size: contain; */
     cursor:pointer;
-    border:none;
+    /* border:none; */
 }
 
 .book_shelf > .book_list > .book_item > .action > .undoGreen:hover {
     background: url('../asset/undobutton.svg');
-    background-size:contain;
+    /* background-size:contain; */
 }
 
 .book_shelf > .book_list > .book_item > .action > .greenDone {
     width : 20px;
     height: 20px;
-
     background: url('../asset/checkbutton.svg');
-    background-size:contain;
+    /* background-size:contain; */
     cursor: pointer;
-    border: none;
+    /* border: none; */
 }
 
 .book_shelf > .book_list > .book_item > .action > .greenDone:hover{
     background: url('../asset/checksolid.svg');
-    background-size: contain;
+    /* background-size: contain; */
 }
 
 .book_shelf > .book_list > .book_item > .action > .redTrash {
     width:20px;
     height:20px;
     background: url('../asset/trashnone.svg');
-    background-size:contain;
+    /* background-size:contain; */
     margin-left:15px;
     cursor:pointer;
-    border:none;
+    /* border:none; */
 }
 
 .book_shelf > .book_list > .book_item > .action > .redTrash:hover {
     background: url('../asset/trashicon.svg');
-    background-size: contain;
+    /* background-size: contain; */
 }
 
 .book_shelf > .book_list > .book_item > .action >.greenDone:focus, .redTrash {
