--- a/style/style.css
+++ b/style/style.css
@@ -164,52 +164,47 @@ main{
     border: 0;
     padding: 5px;
     margin: 0 5px 0 0;
-    box-shadow: 2.5px 2.5px 0.2px black;
     cursor: pointer;
     margin-left: auto;
 }
 
 .book_shelf > .book_list > .book_item > .action > .undoGreen {
-    width:20px;
-    height:20px;
+    width:25px;
+    height:25px;
     background:url('../asset/undobutton.svg');
-    /* background-size: contain; */
-    cursor:pointer;
-    /* border:none; */
+    background-size:contain;
+    border:none;
 }
 
 .book_shelf > .book_list > .book_item > .action > .undoGreen:hover {
     background: url('../asset/undobutton.svg');
-    /* background-size:contain; */
+    background-size:contain;
 }
 
 .book_shelf > .book_list > .book_item > .action > .greenDone {
-    width : 20px;
-    height: 20px;
+    width : 25px;
+    height: 25px;
     background: url('../asset/checkbutton.svg');
-    /* background-size:contain; */
-    cursor: pointer;
-    /* border: none; */
+    background-size:contain;
+    border:none;
 }
 
 .book_shelf > .book_list > .book_item > .action > .greenDone:hover{
     background: url('../asset/checksolid.svg');
-    /* background-size: contain; */
+    background-size:contain;
 }
 
 .book_shelf > .book_list > .book_item > .action > .redTrash {
-    width:20px;
-    height:20px;
+    width:25px;
+    height:25px;
     background: url('../asset/trashnone.svg');
-    /* background-size:contain; */
-    margin-left:15px;
-    cursor:pointer;
-    /* border:none; */
+    background-size:contain;
+    border:none;
 }
 
 .book_shelf > .book_list > .book_item > .action > .redTrash:hover {
     background: url('../asset/trashicon.svg');
-    /* background-size: contain; */
+    background-size:contain;
 }
 
 .book_shelf > .book_list > .book_item > .action >.greenDone:focus, .redTrash {
