--- a/style/styles.css
+++ b/style/styles.css
@@ -7,6 +7,7 @@ box-sizing: border-box;
 body{
 margin: 0;
 padding: 0;
+background: #000;
 }
 
 body, input, button {
@@ -16,7 +17,7 @@ font-family: ' Lato', sans-serif;
 header > nav > h2{
   width: 200px;
   margin-left: -25px;
-  box-shadow: 1px 1px 1px #000;
+  box-shadow: 1px 1px 1px #fff;
   text-align: center;
   border-radius: 50px;
   color: #FF1E00;
@@ -50,10 +51,11 @@ nav > ul > form > li > input{
   padding: 3px;
   height:30px;
   border-radius: 30px;
-  color: #444;
+  background-color: #000;
   outline: none;
   border: none;
-  box-shadow:1px 1px 1px #000;
+  box-shadow:1px 1px 1px #fff;
+  color: #FF1E00;
 }
 nav > ul > form >  li > button{
 width: 60px;
@@ -61,11 +63,11 @@ height: 30px;
 padding: 3px;
 border: none;
 cursor: pointer;
-box-shadow: 1px 1px 0.2px #000;
+box-shadow: 1px 1px 1px #fff;
 font-weight: 700;
 color:#FF1E00;
 border-radius:30px;
-background-color: #fff;
+background-color: #000;
 }
 
 nav > ul > form > li > button:hover {
@@ -171,10 +173,10 @@ main{
 .book_shelf > .book_list > .book_item {
   width: 50%;
   padding: 5px 10px 10px 10px;
-  border: 1px solid #FF5C8D;
   border-radius: 5px;
   margin: 10px 0;
-  background:#FFC0D3;
+  background:white;
+  box-shadow: 1px 1px 1px black;
 }
 
 .book_shelf > .book_list > .book_item > h3, p {
@@ -221,6 +223,7 @@ main{
   background: url('../asset/trashnone.svg');
   background-size:contain;
   border:none;
+  outline:none;
 }
 
 .book_shelf > .book_list > .book_item > .action > .redTrash:hover {
@@ -243,4 +246,36 @@ main{
 
 .book_shelf > .book_list > .book_item > .action >.greenDone:focus, .redTrash {
   outline:none;
+}
+
+footer{
+  margin-top: 50px;
+  background-color:  #FF1E00;;
+  padding: 3px;
+  height: 80px;
+  border-radius:2px;
+}
+
+footer ul{
+  display: flex;
+  justify-content: flex-end;
+}
+
+#footer li {
+  padding: 0 10px;
+  list-style: none;
+}
+
+#footer a{
+  text-decoration: none;
+  color: darkblue;
+}
+
+#footer h4{
+  margin-top: -10px;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 1em;
+  color: #000;
+  padding: 0 10px;
 }
