--- a/style/styles.css
+++ b/style/styles.css
@@ -90,7 +90,7 @@ main{
   padding: 16px;
   border-radius: 5px;
   background: #E8F9FD;
-  box-shadow: 2px 1px 2px grey;
+  box-shadow: 1.5px 1.5px 1px #FF1E00;
   margin: 0 auto;
   width:350px;
 }
@@ -158,7 +158,6 @@ main{
   padding: 16px;
   border-radius: 5px;
   background:#E8F9FD;
-  height: 80vh;
   width:400px;
 }
 
@@ -168,10 +167,10 @@ main{
 
 .book_shelf > .book_list {
   padding: 10px;
+  margin-right: 15px;
 }
 
 .book_shelf > .book_list > .book_item {
-  width: 50%;
   padding: 5px 10px 10px 10px;
   border-radius: 5px;
   margin: 10px 0;
